# api/docs/swagger.yaml
@@ -96,6 +96,13 @@ definitions:
       user_id:
         type: string
     type: object
+  health.GetMedicalReportRes:
+    properties:
+      medical_report:
+        items:
+          $ref: '#/definitions/health.MedicalReport'
+        type: array
+    type: object
   health.GetWearableDataByIdRes:
     properties:
       get_warable_id:
@@ -119,6 +126,27 @@ definitions:
       priority:
         type: integer
       recommendation_type:
+        type: string
+    type: object
+  health.MedicalReport:
+    properties:
+      attachments:
+        items:
+          type: string
+        type: array
+      description:
+        type: string
+      doctor_id:
+        type: string
+      first_name:
+        type: string
+      id:
+        type: string
+      last_name:
+        type: string
+      record_date:
+        type: string
+      record_type:
         type: string
     type: object
   health.UpdateLifeStyleDataReq:
@@ -215,25 +243,6 @@ definitions:
       priority:
         type: integer
       recommendation_type:
-        type: string
-    type: object
-  models.MedicalReport:
-    properties:
-      attachments:
-        items:
-          type: string
-        type: array
-      description:
-        type: string
-      doctor_name:
-        type: string
-      first_name:
-        type: string
-      last_name:
-        type: string
-      record_type:
-        type: string
-      recorded_date:
         type: string
     type: object
   models.Success:
@@ -643,14 +652,14 @@ paths:
       summary: Delete medical report
       tags:
       - MedicalReport
-  /api/medicalReport/get/{user_id}:
+  /api/medicalReport/get:
     get:
       description: Retrieves all medical reports for a user
       responses:
         "200":
           description: Successful operation
           schema:
-            $ref: '#/definitions/models.MedicalReport'
+            $ref: '#/definitions/health.GetMedicalReportRes'
         "500":
           description: Internal server error
           schema:
@@ -895,7 +904,7 @@ paths:
       summary: Delete wearable data
       tags:
       - WearableData
-  /api/wearable/get/{user_id}:
+  /api/wearable/get:
     get:
       consumes:
       - application/json
